--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 .App-logo {
@@ -35,4 +37,86 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  font-family: "Rubik", sans-serif;
+  line-height: 1;
+  font-weight: 400;
+  /* color: #555; */
+  overflow-x: hidden;
+}
+
+.root {
+  height: 100%;
+  width: 100%;
+}
+
+.no-bullets {
+  list-style-type: none; /* Remove bullets */
+  padding: 0; /* Remove padding */
+  margin: 0; /* Remove margins */
+}
+
+.overlay {
+  position: absolute;
+  top: 100px;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  /* background-color: rgba(221, 221, 221, 0.3); */
+  width: 640px;
+  padding: 10px 0;
+  z-index: 2147483647;
+}
+
+#vid {
+  z-index: 1;
+}
+
+.headLinks {
+  text-align: left;
+  background-color: rgba(221, 221, 221, 0.3);
+  width: 125px;
+}
+
+.WelcomeMsg {
+  text-align: center;
+  /* margin-left: 35%; */
+  font-size: 40px;
+  width: 100%;
+}
+
+.a {
+  color: white;
+}
+
+.a:visited {
+  color: white;
+}
+
+.full {
+  width: 100%;
+}
+
+.city {
+  width: 140px;
+  height: 50px;
+  font-size: 17px;
+  text-align: center;
+}
+
+.searchTerm {
+  width: 475px;
+  height: 50px;
+  font-size: 17px;
+  text-align: center;
+}
+
+.submit {
+  width: 75px;
+  height: 50px;
+  background-color: royalblue;
+  color: white;
+  margin: 10px;
 }
