--- a/src/App.css
+++ b/src/App.css
@@ -48,8 +48,9 @@ body {
 }
 
 .root {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vh;
+  overflow: hidden;
 }
 
 .no-bullets {
@@ -60,24 +61,42 @@ body {
 
 .overlay {
   position: absolute;
-  top: 100px;
+  top: 0px;
   color: #fff;
   text-align: center;
   font-size: 20px;
   /* background-color: rgba(221, 221, 221, 0.3); */
   width: 640px;
-  padding: 10px 0;
+  /* padding: 10px 0; */
   z-index: 2147483647;
 }
 
-#vid {
+.background {
   z-index: 1;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .headLinks {
   text-align: left;
   background-color: rgba(221, 221, 221, 0.3);
-  width: 125px;
+  height: 30px;
+  width: 100%;
+  background-color: lightslategrey;
+  /* background-color: transparent; */
+  /* padding: 19px 16px; */
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  font-weight: 600;
+  text-shadow: transparent 1px 0px 0px;
+}
+
+.headLinks span {
+  padding: 0px 15px 0px 15px;
+  font-weight: 800;
 }
 
 .WelcomeMsg {
@@ -119,4 +138,10 @@ body {
   background-color: royalblue;
   color: white;
   margin: 10px;
+}
+
+.accountNumber {
+  height: 45px;
+  width: 400px;
+  font-size: 16px;
 }
