--- a/src/App.css
+++ b/src/App.css
@@ -74,15 +74,28 @@ body {
 .accountInfoTable {
   position: absolute;
   /* top: 0px; */
-  margin-top: 20%;
+  margin-top: 15%;
   margin-left: 33%;
   color: #fff;
   text-align: center;
-  font-size: 20px;
+  font-size: 30px;
   /* background-color: rgba(221, 221, 221, 0.3); */
   width: 640px;
   height: 700px;
   /* padding: 10px 0; */
+  z-index: 2147483647;
+}
+
+.danFaucetInfoTable {
+  position: absolute;
+  /* top: 0px; */
+  margin-top: 15%;
+  margin-left: 10%;
+  color: #fff;
+  text-align: center;
+  font-size: 30px;
+  width: 80%;
+  height: 700px;
   z-index: 2147483647;
 }
 
@@ -163,4 +176,20 @@ body {
 
 .userAccountInput {
   size: "100";
+}
+
+.overlay button {
+  /* width: 75px; */
+  height: 50px;
+  background-color: royalblue;
+  color: white;
+  margin: 15px;
+  border-radius: 10px;
+}
+
+.genInput {
+  height: 30px;
+  width: 390px;
+  font-size: 16px;
+  font-weight: bolder;
 }
