--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
+body,
+html {
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+}
+
+.accountinfo-bg {
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-image: url("./resources/wall1.jpg");
+  overflow: hidden;
+}
+
 .App {
   text-align: center;
   width: 100%;
@@ -88,15 +110,17 @@ body {
 
 .danFaucetInfoTable {
   position: absolute;
-  /* top: 0px; */
   margin-top: 15%;
-  margin-left: 10%;
-  color: #fff;
+  margin-left: 30%;
+  color: black;
   text-align: center;
   font-size: 30px;
-  width: 80%;
-  height: 700px;
+  width: 40%;
+  height: 30%;
+  min-width: 420px;
+  min-height: 380px;
   z-index: 2147483647;
+  background-color: white;
 }
 
 .background {
@@ -192,6 +216,8 @@ body {
   width: 400px;
   font-size: 16px;
   font-weight: bolder;
+  padding: 5px;
+  margin-bottom: 10px;
 }
 
 .mintNewToken {
@@ -199,4 +225,25 @@ body {
   width: 400px;
   font-size: 16px;
   font-weight: bolder;
+}
+
+.minPad {
+  padding: 5px;
+}
+
+.morePad {
+  padding: 5px;
+  padding-right: 42px;
+}
+
+@media (max-width: 44em) {
+  .danFaucetInfoTable {
+    margin-left: 15%;
+  }
+}
+
+@media (max-width: 555px) {
+  .danFaucetInfoTable {
+    margin-left: 2%;
+  }
 }
