--- a/src/App.css
+++ b/src/App.css
@@ -5,21 +5,6 @@ html {
   overflow: hidden;
 }
 
-.accountinfo-bg {
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-image: url("./resources/wall1.jpg");
-  overflow: hidden;
-}
-
 .App {
   text-align: center;
   width: 100%;
@@ -110,17 +95,18 @@ body {
 
 .danFaucetInfoTable {
   position: absolute;
-  margin-top: 15%;
+  margin-top: 5%;
   margin-left: 30%;
   color: black;
   text-align: center;
   font-size: 30px;
   width: 40%;
-  height: 30%;
+  height: 40%;
   min-width: 420px;
-  min-height: 380px;
+  min-height: 700px;
   z-index: 2147483647;
   background-color: white;
+  border: solid black 8px;
 }
 
 .background {
@@ -246,4 +232,53 @@ body {
   .danFaucetInfoTable {
     margin-left: 2%;
   }
+}
+
+.accountinfo-bg {
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-image: url("./resources/Block1.jpeg");
+  overflow: hidden;
+}
+
+.vendor-bg {
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-image: url("./resources/wall1.jpg");
+  overflow: hidden;
+}
+
+.dantok-bg {
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-image: url("./resources/wall6.jpg");
+  overflow: hidden;
+}
+
+.b-border {
+  border: 2px solid black;
 }
