--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,22 @@ body {
   width: 40%;
   height: 40%;
   min-width: 420px;
+  min-height: 720px;
+  z-index: 2147483647;
+  background-color: white;
+  border: solid black 8px;
+}
+
+.accountInfoTable {
+  position: absolute;
+  margin-top: 5%;
+  margin-left: 30%;
+  color: black;
+  text-align: center;
+  font-size: 30px;
+  width: 40%;
+  height: 40%;
+  min-width: 420px;
   min-height: 700px;
   z-index: 2147483647;
   background-color: white;
@@ -226,10 +242,18 @@ body {
   .danFaucetInfoTable {
     margin-left: 15%;
   }
+
+  .accountInfoTable {
+    margin-left: 15%;
+  }
 }
 
 @media (max-width: 555px) {
   .danFaucetInfoTable {
+    margin-left: 2%;
+  }
+
+  .accountInfoTable {
     margin-left: 2%;
   }
 }
@@ -281,4 +305,9 @@ body {
 
 .b-border {
   border: 2px solid black;
+}
+
+.balanceText {
+  font-size: 22px;
+  padding: 6px;
 }
