--- a/src/App.css
+++ b/src/App.css
@@ -285,7 +285,7 @@ body {
   width: 100%;
   height: 100%;
   background-size: cover;
-  background-image: url("./resources/Block1.jpeg");
+  background-image: url("https://resource-web.s3.us-east-2.amazonaws.com/Block1.jpeg");
   overflow: hidden;
 }
 
