--- a/src/App.css
+++ b/src/App.css
@@ -274,6 +274,21 @@ body {
   overflow: hidden;
 }
 
+.transfertoken-bg {
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-image: url("./resources/Block10.jpg");
+  overflow: hidden;
+}
+
 .vendor-bg {
   /* Center and scale the image nicely */
   background-position: center;
@@ -315,4 +330,63 @@ body {
 
 .explainText {
   font-size: 16px;
+}
+
+.amountToSend {
+  width: 60px;
+  height: 40px;
+}
+
+.amountToSend {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.fromSection {
+  display: grid;
+  align-items: center;
+  width: 620px;
+  height: 150px;
+  border: 1px solid black;
+  margin-left: 10%;
+}
+
+.fromAcctNum {
+  width: 100%;
+  display: flex;
+}
+
+#acctNumLabel {
+  max-width: 200px;
+}
+
+.sectionTitle {
+  display: grid;
+  padding: 0;
+  margin: 0;
+  left: 0;
+}
+
+.amountLabel {
+  margin-right: 5px;
+  margin-top: 5px;
+  margin-left: 10px;
+}
+
+.toSection {
+  display: grid;
+  align-items: center;
+  width: 620px;
+  height: 100px;
+  border: 1px solid black;
+  margin-left: 10%;
+}
+
+.toAcctNum {
+  width: 100%;
+  display: flex;
+}
+
+#toTokenAddress {
+  margin-bottom: 5px;
 }
