--- a/src/App.css
+++ b/src/App.css
@@ -81,14 +81,14 @@ body {
 .danFaucetInfoTable {
   position: absolute;
   margin-top: 3%;
-  margin-left: 30%;
+  margin-left: 25%;
   color: black;
   text-align: center;
   font-size: 30px;
   width: 40%;
   height: 40%;
   min-width: 750px;
-  min-height: 720px;
+  min-height: 700px;
   z-index: 2147483647;
   background-color: white;
   border: solid black 8px;
@@ -97,7 +97,7 @@ body {
 .accountInfoTable {
   position: absolute;
   margin-top: 3%;
-  margin-left: 30%;
+  margin-left: 25%;
   color: black;
   text-align: center;
   font-size: 30px;
@@ -113,7 +113,7 @@ body {
 .aboutTable {
   position: absolute;
   margin-top: 3%;
-  margin-left: 30%;
+  margin-left: 25%;
   color: black;
   text-align: center;
   font-size: 30px;
@@ -126,20 +126,31 @@ body {
   border: solid black 8px;
 }
 
-.aboutText {
-  font-size: 22px;
+.aboutTable h2 {
+  margin: 10px;
 }
 
-.aboutText p {
+.aboutDesc {
   font-size: 22px;
-  padding-left: 5%;
-  margin-right: 5%;
+  margin: 2%;
+  margin-bottom: 30px;
+}
+
+.aboutList {
+  margin-left: 10%;
+}
+
+.aboutList li {
+  font-size: 18px;
+  margin: 1%;
+  text-align: left;
+  color: blue;
 }
 
 .vendorTable {
   position: absolute;
   margin-top: 5%;
-  margin-left: 30%;
+  margin-left: 25%;
   color: black;
   text-align: center;
   font-size: 30px;
@@ -365,7 +376,7 @@ body {
 }
 
 .balanceText {
-  font-size: 22px;
+  font-size: 18px;
   padding: 6px;
 }
 
